.antlr/webroboteudslParser.java
// Generated from /home/roger/webrobot.eu.queryengine.dsl/webroboteudsl.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class webroboteudslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, SCOL=2, DOT=3, OPEN_PAR=4, CLOSE_PAR=5, COMMA=6, ASSIGN=7, STAR=8, 
		PLUS=9, MINUS=10, TILDE=11, PIPE2=12, DIV=13, MOD=14, LT2=15, GT2=16, 
		AMP=17, PIPE=18, LT=19, LT_EQ=20, GT=21, GT_EQ=22, EQ=23, NOT_EQ1=24, 
		NOT_EQ2=25, A_SCREENSHOT=26, A_CLICK=27, A_ASSERT=28, A_OAUTHSIGN=29, 
		A_DELAY=30, A_RANDOMDELAY=31, A_CLICKNEXT=32, A_DROPDOWNSELECT=33, A_EXESCRIPT=34, 
		A_DRAGSLIDER=35, A_WAITFOR=36, A_LOOP=37, A_IF=38, A_WGET=39, A_SNAPSHOT=40, 
		A_SUBMIT=41, A_TEXTINPUT=42, C_DISTINCT=43, C_WGETJOIN=44, C_WGETEXPLORE=45, 
		C_JOIN=46, C_VISITJOIN=47, C_VISITEXPLORE=48, C_FLATSELECT=49, C_SELECT=50, 
		C_EXPLORE=51, C_FLATTEN=52, C_EXPLODE=53, C_FETCH=54, P_MAXDEPTH=55, P_CACHEERROR=56, 
		P_RETRIES=57, P_LIMIT=58, P_BLOCKING=59, P_DELEY=60, P_TIMEOUT=61, P_ALIAS=62, 
		P_FILTER=63, P_OPTIMIZER=64, K_EVAL=65, K_FINDALL=66, K_FINDFIRST=67, 
		K_CHILDREN=68, K_CHILD=69, K_URI=70, K_CODE=71, K_TEXT=72, K_OWNTEXT=73, 
		K_ATTR=74, K_HREF=75, K_SRC=76, K_BOILERPIPE=77, K_AUTOMATIC=78, K_PTA=79, 
		K_LANGUAGE=80, K_TOKENIZER=81, K_POSTAGGER=82, K_NER=83, K_POLARITY=84, 
		K_SENTIMENT=85, K_CONCEPT=86, K_COMMENTS=87, K_ARTICLE=88, K_URL=89, K_SPLITTER=90, 
		K_VALUE=91, K_SELECTOR=92, K_VISIT=93, K_ARE=94, K_PARAMETERS=95, K_PIVOTED=96, 
		K_CURRENT=97, K_ACTION=98, K_ACTIONS=99, K_AND=100, K_AS=101, K_FROM=102, 
		K_IN=103, K_TRY=104, K_THEN=105, K_WHERE=106, K_WITH=107, K_LEFT=108, 
		K_INNER=109, K_CONFIG=110, K_OAUTHKEYS=111, K_KEYS=112, K_DEFAULT=113, 
		K_REPLACE_ALL=114, IDENTIFIER=115, NUMERIC_LITERAL=116, BIND_PARAMETER=117, 
		STRING_LITERAL=118, BLOB_LITERAL=119, SINGLE_LINE_COMMENT=120, MULTILINE_COMMENT=121, 
		SPACES=122, UNEXPECTED_CHAR=123;
	public static final int
		RULE_parse = 0, RULE_error = 1, RULE_sql_stmt_list = 2, RULE_istruction_stmt = 3, 
		RULE_config_oauth_stmt = 4, RULE_config_clause_stmt = 5, RULE_type_clauses = 6, 
		RULE_list_keys = 7, RULE_query_stmt = 8, RULE_sql_stmt = 9, RULE_fetch_stmt = 10, 
		RULE_list_actions_stmt = 11, RULE_action_stmt = 12, RULE_list_parameters_stmt = 13, 
		RULE_parameter_stmt = 14, RULE_explore_stmt = 15, RULE_wgetexplore_stmt = 16, 
		RULE_join_stmt = 17, RULE_wgetjoin_stmt = 18, RULE_flatten_stmt = 19, 
		RULE_flatselect_stmt = 20, RULE_select_stmt = 21, RULE_select_static_field_stmt = 22, 
		RULE_select_automatic_stmt = 23, RULE_algotype = 24, RULE_string_expr = 25, 
		RULE_symbol = 26, RULE_eval_expression = 27, RULE_suboperator = 28, RULE_nlpoperator = 29, 
		RULE_selector_expression = 30, RULE_signed_number = 31, RULE_literal_value = 32, 
		RULE_unary_operator = 33, RULE_error_message = 34, RULE_column_alias = 35, 
		RULE_keyword = 36, RULE_name = 37, RULE_any_name = 38, RULE_argument_alias = 39, 
		RULE_actions = 40;
	public static final String[] ruleNames = {
		"parse", "error", "sql_stmt_list", "istruction_stmt", "config_oauth_stmt", 
		"config_clause_stmt", "type_clauses", "list_keys", "query_stmt", "sql_stmt", 
		"fetch_stmt", "list_actions_stmt", "action_stmt", "list_parameters_stmt", 
		"parameter_stmt", "explore_stmt", "wgetexplore_stmt", "join_stmt", "wgetjoin_stmt", 
		"flatten_stmt", "flatselect_stmt", "select_stmt", "select_static_field_stmt", 
		"select_automatic_stmt", "algotype", "string_expr", "symbol", "eval_expression", 
		"suboperator", "nlpoperator", "selector_expression", "signed_number", 
		"literal_value", "unary_operator", "error_message", "column_alias", "keyword", 
		"name", "any_name", "argument_alias", "actions"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'$'", "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", "'-'", 
		"'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", "'<='", 
		"'>'", "'>='", "'=='", "'!='", "'<>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "ASSIGN", 
		"STAR", "PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", 
		"AMP", "PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", 
		"A_SCREENSHOT", "A_CLICK", "A_ASSERT", "A_OAUTHSIGN", "A_DELAY", "A_RANDOMDELAY", 
		"A_CLICKNEXT", "A_DROPDOWNSELECT", "A_EXESCRIPT", "A_DRAGSLIDER", "A_WAITFOR", 
		"A_LOOP", "A_IF", "A_WGET", "A_SNAPSHOT", "A_SUBMIT", "A_TEXTINPUT", "C_DISTINCT", 
		"C_WGETJOIN", "C_WGETEXPLORE", "C_JOIN", "C_VISITJOIN", "C_VISITEXPLORE", 
		"C_FLATSELECT", "C_SELECT", "C_EXPLORE", "C_FLATTEN", "C_EXPLODE", "C_FETCH", 
		"P_MAXDEPTH", "P_CACHEERROR", "P_RETRIES", "P_LIMIT", "P_BLOCKING", "P_DELEY", 
		"P_TIMEOUT", "P_ALIAS", "P_FILTER", "P_OPTIMIZER", "K_EVAL", "K_FINDALL", 
		"K_FINDFIRST", "K_CHILDREN", "K_CHILD", "K_URI", "K_CODE", "K_TEXT", "K_OWNTEXT", 
		"K_ATTR", "K_HREF", "K_SRC", "K_BOILERPIPE", "K_AUTOMATIC", "K_PTA", "K_LANGUAGE", 
		"K_TOKENIZER", "K_POSTAGGER", "K_NER", "K_POLARITY", "K_SENTIMENT", "K_CONCEPT", 
		"K_COMMENTS", "K_ARTICLE", "K_URL", "K_SPLITTER", "K_VALUE", "K_SELECTOR", 
		"K_VISIT", "K_ARE", "K_PARAMETERS", "K_PIVOTED", "K_CURRENT", "K_ACTION", 
		"K_ACTIONS", "K_AND", "K_AS", "K_FROM", "K_IN", "K_TRY", "K_THEN", "K_WHERE", 
		"K_WITH", "K_LEFT", "K_INNER", "K_CONFIG", "K_OAUTHKEYS", "K_KEYS", "K_DEFAULT", 
		"K_REPLACE_ALL", "IDENTIFIER", "NUMERIC_LITERAL", "BIND_PARAMETER", "STRING_LITERAL", 
		"BLOB_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", 
		"UNEXPECTED_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "webroboteudsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public webroboteudslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(webroboteudslParser.EOF, 0); }
		public List<Sql_stmt_listContext> sql_stmt_list() {
			return getRuleContexts(Sql_stmt_listContext.class);
		}
		public Sql_stmt_listContext sql_stmt_list(int i) {
			return getRuleContext(Sql_stmt_listContext.class,i);
		}
		public List<ErrorContext> error() {
			return getRuleContexts(ErrorContext.class);
		}
		public ErrorContext error(int i) {
			return getRuleContext(ErrorContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCOL || _la==C_FETCH || _la==K_CONFIG || _la==UNEXPECTED_CHAR) {
				{
				setState(84);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SCOL:
				case C_FETCH:
				case K_CONFIG:
					{
					setState(82);
					sql_stmt_list();
					}
					break;
				case UNEXPECTED_CHAR:
					{
					setState(83);
					error();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token UNEXPECTED_CHAR;
		public TerminalNode UNEXPECTED_CHAR() { return getToken(webroboteudslParser.UNEXPECTED_CHAR, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((ErrorContext)_localctx).UNEXPECTED_CHAR = match(UNEXPECTED_CHAR);
			 
			     throw new RuntimeException("UNEXPECTED_CHAR=" + (((ErrorContext)_localctx).UNEXPECTED_CHAR!=null?((ErrorContext)_localctx).UNEXPECTED_CHAR.getText():null)); 
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_stmt_listContext extends ParserRuleContext {
		public List<Istruction_stmtContext> istruction_stmt() {
			return getRuleContexts(Istruction_stmtContext.class);
		}
		public Istruction_stmtContext istruction_stmt(int i) {
			return getRuleContext(Istruction_stmtContext.class,i);
		}
		public Sql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt_list; }
	}

	public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
		Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCOL) {
				{
				{
				setState(94);
				match(SCOL);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			istruction_stmt();
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(101);
						match(SCOL);
						}
						}
						setState(104); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SCOL );
					setState(106);
					istruction_stmt();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					match(SCOL);
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Istruction_stmtContext extends ParserRuleContext {
		public Query_stmtContext query_stmt() {
			return getRuleContext(Query_stmtContext.class,0);
		}
		public Config_oauth_stmtContext config_oauth_stmt() {
			return getRuleContext(Config_oauth_stmtContext.class,0);
		}
		public Config_clause_stmtContext config_clause_stmt() {
			return getRuleContext(Config_clause_stmtContext.class,0);
		}
		public Istruction_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_istruction_stmt; }
	}

	public final Istruction_stmtContext istruction_stmt() throws RecognitionException {
		Istruction_stmtContext _localctx = new Istruction_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_istruction_stmt);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				query_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				config_oauth_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				config_clause_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_oauth_stmtContext extends ParserRuleContext {
		public TerminalNode K_CONFIG() { return getToken(webroboteudslParser.K_CONFIG, 0); }
		public TerminalNode K_OAUTHKEYS() { return getToken(webroboteudslParser.K_OAUTHKEYS, 0); }
		public TerminalNode K_WITH() { return getToken(webroboteudslParser.K_WITH, 0); }
		public TerminalNode K_KEYS() { return getToken(webroboteudslParser.K_KEYS, 0); }
		public List_keysContext list_keys() {
			return getRuleContext(List_keysContext.class,0);
		}
		public Config_oauth_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_oauth_stmt; }
	}

	public final Config_oauth_stmtContext config_oauth_stmt() throws RecognitionException {
		Config_oauth_stmtContext _localctx = new Config_oauth_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_config_oauth_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(K_CONFIG);
			setState(124);
			match(K_OAUTHKEYS);
			setState(125);
			match(K_WITH);
			setState(126);
			match(K_KEYS);
			setState(127);
			match(OPEN_PAR);
			setState(128);
			list_keys();
			setState(129);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_clause_stmtContext extends ParserRuleContext {
		public TerminalNode K_CONFIG() { return getToken(webroboteudslParser.K_CONFIG, 0); }
		public Type_clausesContext type_clauses() {
			return getRuleContext(Type_clausesContext.class,0);
		}
		public TerminalNode K_WITH() { return getToken(webroboteudslParser.K_WITH, 0); }
		public TerminalNode K_DEFAULT() { return getToken(webroboteudslParser.K_DEFAULT, 0); }
		public TerminalNode K_PARAMETERS() { return getToken(webroboteudslParser.K_PARAMETERS, 0); }
		public List_parameters_stmtContext list_parameters_stmt() {
			return getRuleContext(List_parameters_stmtContext.class,0);
		}
		public Config_clause_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_clause_stmt; }
	}

	public final Config_clause_stmtContext config_clause_stmt() throws RecognitionException {
		Config_clause_stmtContext _localctx = new Config_clause_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_config_clause_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(K_CONFIG);
			setState(132);
			type_clauses();
			setState(133);
			match(K_WITH);
			setState(134);
			match(K_DEFAULT);
			setState(135);
			match(K_PARAMETERS);
			setState(136);
			match(OPEN_PAR);
			setState(137);
			list_parameters_stmt();
			setState(138);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
